--- a/batch68.cabal
+++ b/batch68.cabal
@@ -43,7 +43,9 @@ library
     exposed-modules:
       Simple.Simple,
       Simple.SimpleType,
-      Simple.OffChainType
+      Simple.OffChainType,
+      Beneficiary.OnChain,
+      Beneficiary.OffChain
 
 
 -- Plutus dependencies
