Parameterized interacting with cli

--- a/batch68.cabal
+++ b/batch68.cabal
@@ -45,7 +45,11 @@ library
       Simple.SimpleType,
       Simple.OffChainType,
       Beneficiary.OnChain,
-      Beneficiary.OffChain
+      Beneficiary.OffChain,
+      Parameterized.OnChain,
+      Parameterized.OffChain,
+      Parameterized.Deploy,
+      Parameterized.EmulatorParameterized,
 
 
 -- Plutus dependencies
